# Tolerance-Analysis-Tool

./: .gitignore  README.md  pyproject.toml
docs/: GUIDE.md  HANDOFF.md  design.md  requirements.md
examples/: bearing_housing_stack.json
tests/: conftest.py  render_harness.py
tests/unit/: test_unit_converter.py
tolerance_analysis/: __init__.py  main.py
tolerance_analysis/boundary/: __init__.py  controller.py  standards.py  unit_converter.py
tolerance_analysis/engine/: __init__.py  converter.py  iso286.py  models.py  monte_carlo.py  rss.py  validator.py  warnings.py  worst_case.py
tolerance_analysis/gui/: __init__.py  chain_tab.py  detail_panel.py  dialogs.py  help_panel.py  main_window.py  results_panel.py  theme.py  tolerance_input.py  visualization.py  viz_debug_dock.py
tolerance_analysis/io/: __init__.py  pdf_report.py  project_file.py  schema.py
tolerance_analysis/resources/: __init__.py
