[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tolerance-analysis-tool"
version = "0.1.0"
description = "A PyQt5 desktop application for mechanical tolerance stack-up analysis"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "PyQt5>=5.15.0",
    "numpy>=1.24.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.82.0",
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
]

[project.scripts]
tolerance-analysis = "tolerance_analysis.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
include = ["tolerance_analysis*"]

[tool.hypothesis]
database_backend = "directory"
